--- a/README
+++ b/README
@@ -6,8 +6,8 @@
 
 This is the Test Gear client library which offers an API for communicating with
 Test Gear device servers. The API allows client applications to connect, load
-plugins, query variables, run commands, and finally disconnect from Test Gear
-device servers.
+plugins, query/manage variables, run commands, and finally disconnect from Test
+Gear device servers.
 
 
 2. License
@@ -16,7 +16,7 @@ libtestgear includes code covered by the following licenses:
 
  * BSD-3, commonly known as the 3-clause (or "modified") BSD license
 
-Please, check the source code for more details. A license is usually at the
+Please check the source code for more details. A license is usually at the
 start of each source file.
 
 The COPYING file (BSD-3) is the default license for code without an explicitly
