--- a/README
+++ b/README
@@ -4,20 +4,35 @@
 
 1. Introduction
 
-This is the Test Gear client library which offers an API for communicating with
-Test Gear device servers. The API allows client applications to connect, load
-plugins, query/manage variables, run commands, and finally disconnect from Test
-Gear device servers.
+    This is the Test Gear client library which offers an API for communicating
+    with Test Gear device servers. The API allows client applications to
+    connect, load plugins, query/manage variables, run commands, and finally
+    disconnect from Test Gear device servers.
+
+    It is part of the Test Gear project which aims to create a simple hardware
+    test framework for use with any type of GNU/Linux based system.
 
 
-2. License
+2. Status
 
-libtestgear includes code covered by the following licenses:
+    The code is currently considered highly experimental. API and internals are
+    subject to change. Use on your own risk. For now, consider it a playground
+    for experiments.
 
- * BSD-3, commonly known as the 3-clause (or "modified") BSD license
+3. Development
 
-Please check the source code for more details. A license is usually at the
-start of each source file.
+    This is open source. If you want to help out with the project please join
+    in. Any contributions (code, doc, ideas, etc.) are welcome.
 
-The COPYING file (BSD-3) is the default license for code without an explicitly
-defined license.
+
+4. License
+
+    libtestgear includes code covered by the following licenses:
+
+     * BSD-3, commonly known as the 3-clause (or "modified") BSD license
+
+    Please check the source code for more details. A license is usually at the
+    start of each source file.
+
+    The COPYING file (BSD-3) is the default license for code without an
+    explicitly defined license.
